compiler/tools/fpp-check/test/state_machine/typed_elements/state_junction_bad_else_action_type.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/state_machine/typed_elements/state_junction_bad_else_action_type.fpp:7.41
    junction J { if g enter T else do { a } enter T }
                                        ^
error: type mismatch at junction
type of junction is None
type of action is U32
